--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -31,3 +31,76 @@ body {
 li {
   list-style-type: none;
 }
+
+
+/* Bannier Home & About */
+.bannier {
+  margin:2em 0;
+
+  @media screen and (max-width: 768px) {
+      margin:1em 0;
+  }
+}
+
+.bannier-section {
+  display : flex;
+  flex-direction: column;
+  justify-content: center;
+  width : 100%;
+  height:223px;
+  position:relative;
+
+  @media screen and (max-width: 768px) {
+      height: 150px;
+  }
+}
+
+.bannier-img {
+  display:flex;
+  width: 100%;
+  border-radius:20px;
+  overflow:hidden;
+  height: 223px;
+
+  @media screen and (max-width: 768px) {
+      height: 150px;
+  }
+}
+
+.bannier-img-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.5;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 20px;
+
+  p {
+      font-size:3em;
+      color: white;
+      position:absolute;
+      text-align: center;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width:100%;
+
+      @media screen and (max-width: 992px) {
+          font-size:2em;
+      }
+  
+      @media screen and (max-width: 768px) {
+          font-size:1.8em;
+          line-height:1.4em;
+          text-align:left;
+          width:65%;
+          top: 50%;
+          left: 5%;
+          transform: translate(-5%, -50%);
+      }
+  }
+}
