--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -42,7 +42,7 @@ li {
   }
 }
 
-.bannier-section {
+.bannier__section {
   display : flex;
   flex-direction: column;
   justify-content: center;
@@ -55,7 +55,7 @@ li {
   }
 }
 
-.bannier-img {
+.bannier__img {
   display:flex;
   width: 100%;
   border-radius:20px;
@@ -67,7 +67,7 @@ li {
   }
 }
 
-.bannier-img-overlay {
+.bannier__img-overlay {
   position: absolute;
   top: 0;
   bottom: 0;
