--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,4 +1,4 @@
-.card-item {
+.card__item {
     width:100%;
     height:340px;
     display: flex;
@@ -16,7 +16,7 @@
 
 }
 
-.card-item_title {
+.card__item__title {
     position: absolute;
     width: 100%;
     background: linear-gradient(180deg,rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
