--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -6,6 +6,7 @@
     text-align: center;
     width: 100%;
     height: 200px;
+    margin-top:10%;
 
     @media screen and (max-width: 768px) {
         height: 100px;
@@ -27,8 +28,4 @@
     width:100%;
     display:flex;
     justify-content: center;
-
-    img {
-        width:15%;
-    }
 }
