--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,4 +3,5 @@
 @import './components/footer';
 @import './components/gallery';
 @import './components/card';
-@import './components/accordeon';
+@import './components/rating';
+@import './components/accordeon'
