--- a/src/styles/components/_accordeon.scss
+++ b/src/styles/components/_accordeon.scss
@@ -31,7 +31,7 @@
     }
 }
 
-h1 {
+.accordeon__title p {
     font-size:1.6em;
     display:flex;
     color:white;
@@ -71,15 +71,9 @@ h1 {
     background-color: rgba(246, 246, 246, 1);
     padding: 1.2em 1em 1em 1em;
     border-radius: 0 0 5px 5px;
-    margin-top: -5px;
-    font-size:1.6em;
-    line-height:1.5em;
+    margin-top: -2px;
     margin-bottom:1em;
     height:100%;
     opacity: 1;
 	transition: height 0.4s ease-out, opacity 0.2s ease-out;
-
-    @media screen and (max-width: 768px) {
-        font-size:1.1em;
-    }
     }
