--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -112,14 +112,11 @@ section {
 }
 
 /* ABOUT */
-.about .active  .accordeon__content {
-  font-size:1.3em;
-  line-height:1.5em;
-
-  @media screen and (max-width: 768px) {
-      font-size:1em;
-  }
-  }
+.about__accordeon {
+  width:90%;
+  display:block;
+  margin:0 auto;
+}
 
 /* ERROR */
 .error {
@@ -182,58 +179,49 @@ section {
   flex-direction:row;
   justify-content: space-between;
   align-items:center;
+  width:100%;
+
+  @media screen and (max-width: 768px) {
+    flex-direction:column;
+  }
 }
 
 .logement__title {
   color: $color-1;
   margin:2% 0 0 0;
-  width:80%;
+  display:flex;
+  flex-direction:column;
+  width:70%;
+
+  @media screen and (max-width: 768px) {
+    width:100%;
+  }
 
     h2 {
       font-size:1.8em;
+
+      @media screen and (max-width: 768px) {
+        font-size:1.4em;
+      }
     }
 
     h3 {
       font-size:1.1em;
       margin:0.8em 0 2em 0;
+      
+      @media screen and (max-width: 768px) {
+        font-size:0.9em;
+      }
     }    
 }
-
-.logement__host {
-  color:$color-1;
-  display:flex;
-  flex-direction:column;
-  width:15%;
-  margin:0;
-}
-
-.logement__host__name {
-  display:flex;
-  flex-direction:row;
-
-  p {
-    font-size:1.4em;
-    padding:0.4em;
-    text-align:right;
-    line-height:1.2em;
-  }
-  
-  img{
-    border-radius:50%;
-    width:64px;
-    height:64px;
-  }
-}
-
-.logement__rating {
-  margin-top: 5%;
-  text-align:right;
-}
-
 
 .tags {
   display:flex;
   flex-direction: row;
+  
+  @media screen and (max-width: 768px) {
+    margin-top:0;
+  }
 }
 
 .tag {
@@ -243,7 +231,73 @@ section {
   margin-right:1em;
   border-radius:1em;
   font-size:0.8em;
+
+  @media screen and (max-width: 768px) {
+    font-size:0.6em;
+    padding : 0.1em 2em;
+    margin-right:0.5em;
+  }
 }
+
+.logement__host {
+  color:$color-1;
+  display:flex;
+  flex-direction:column;
+  margin:0;
+
+  @media screen and (max-width: 768px) {
+    flex-direction:row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+
+.logement__host__name {
+  display:flex;
+  flex-direction:row;
+  height:100%;
+  margin: 5% 0 3% 0;
+  text-align: end;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-align:end;
+
+  @media screen and (max-width: 768px) {
+    order: 2;
+  }
+
+  p {
+    font-size:1.3em;
+    padding:0.4em;
+    width: 46%;
+  }
+  
+  img{
+    border-radius:50%;
+    width:64px;
+    height:64px;
+    position: relative;
+    -o-object-fit: cover;
+       object-fit: cover;
+
+    @media screen and (max-width: 768px) {
+      width:32px;
+      height:32px;
+    }
+  }
+}
+
+.logement__rating {
+  margin-top: 5%;
+  text-align:right;
+
+  @media screen and (max-width: 768px) {
+    order: 1;
+  }
+}
+
 
 .logement__body {
   display:flex;
@@ -252,12 +306,18 @@ section {
   margin:2em 0;
   width:100%;
   padding:0;
-  background-color:red;
+
+  @media screen and (max-width: 768px) {
+    flex-direction:column;
+  }
 }
 
 .logement__description, .logement__equipment {
   margin:0;
-  font-size:1em;
-  width:50%;
+  width:47%;
   height:100%;
+  
+  @media screen and (max-width: 768px) {
+    width:100%
+  }
 }
