--- a/src/styles/components/_rating.scss
+++ b/src/styles/components/_rating.scss
@@ -1,4 +1,9 @@
 .rating__items img {
     width:30px;
     height:30px;
+
+    @media screen and (max-width: 768px) {
+        width:20px;
+        height:20px;
+      }
 }
