mise en place carrousel + redirection error quand erreur sur id

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,4 +4,5 @@
 @import './components/gallery';
 @import './components/card';
 @import './components/rating';
-@import './components/accordeon'
+@import './components/accordeon';
+@import './components/carrousel';
