--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -26,6 +26,7 @@ body {
   display: block;
   margin: auto;
   font-family: "font-1";
+  height:100%;
 }
 
 li {
@@ -128,15 +129,12 @@ section {
 }
 
 .error__title {
-  width:100%;
+  width:80%;
   margin-top:5%;
   
   img {
-    width:100%;
+    width:70%;
   
-      @media screen and (max-width: 992px) {
-      width:70%;
-      }
 
       @media screen and (max-width: 768px) {
         width:50%;
@@ -174,7 +172,7 @@ section {
 }
 
 .logement__head {
-  margin-top:10%;
+  margin-top:2em;
   display:flex;
   flex-direction:row;
   justify-content: space-between;
@@ -272,6 +270,10 @@ section {
     font-size:1.3em;
     padding:0.4em;
     width: 46%;
+    
+    @media screen and (max-width: 768px) {
+      margin-right:0.5em;
+    }
   }
   
   img{
