--- a/src/styles/components/_carrousel.scss
+++ b/src/styles/components/_carrousel.scss
@@ -1,52 +1,42 @@
 .slider__container {
     position: relative;
     width: 100%;
-    margin-top:5%;
-    height:450px;
+    margin:5% auto 0 auto;
+    height:415px;
 
     @media screen and (max-width: 768px) {
         height: 300px;
     }
 }
-
-.slider__prev {
-    position: absolute;
-    width:30px;
-    height:70px;
-    left: 3%;
-    top: 50%;
-    transform: translate(0, -50%);
-
-    @media screen and (max-width: 768px) {
-        transform: translate(0, -50%) scale(0.5) ;
-    }
-}
-
-.slider__next {
-    position: absolute;
-    width:30px;
-    height:70px;
-    right: 3%;
-    top: 50%;
-    transform: translate(0, -50%);
-
-    @media screen and (max-width: 768px) {
-        transform: translate(0, -50%) scale(0.5) ;
-    }
-}
-
+  
 .slider__image {
     -o-object-fit: cover;
        object-fit: cover;
     overflow: hidden; 
     width: 100%;
-    height: 450px;
-    border-radius: 15px;
+    height: 415px;
+    border-radius: 25px;
+    -webkit-animation-name: fade;
+    animation-name: fade;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
 
     @media screen and (max-width: 768px) {
         height: 300px;
     }
 } 
+
+
+@-webkit-keyframes fade {
+    from {opacity: .3}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .3}
+    to {opacity: 1}
+  }
+
 
 .slider__number {
     position: absolute;
@@ -59,3 +49,31 @@
         display: none;
     }
 }
+
+/* Bouttons */
+.slider__prev, .slider__next {
+    position: absolute;
+    width:40px;
+    height:80px;
+    top: 50%;
+    transform: translate(0, -50%);
+    padding:10px;
+    transition: 0.6s ease;
+    border-radius:5px;
+
+    @media screen and (max-width: 768px) {
+        transform: translate(0, -50%) scale(0.5) ;
+    }
+}
+
+.slider__prev {
+    left: 0;
+}
+
+.slider__next {
+    right: 0;
+}
+
+.slider__prev:hover, .slider__next:hover {
+    background-color: rgba(0,0,0,0.3);
+  }
