--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -5,16 +5,18 @@
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
-    margin-top:1em;
+    margin-top:1.5em;
     margin-bottom:2em;
     padding:2%;
     justify-content:space-around;
 
 
+    @media screen and (max-width: 992px) {
+        margin-top:1em;
+    }
+
     @media screen and (max-width: 768px) {
-        flex-direction:column;
-        justify-content:center;
-        margin-top:0.5em;
+        margin-top:0.8em;
     }
 }
 
