retrait des ajouts css

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -21,7 +21,7 @@ body {
   font-weight:500;
   font-size:14px;
   line-height:19.96px;
-  width:95%;
+  width:98%;
   max-width: 1440px;
   display: block;
   margin: auto;
@@ -40,7 +40,7 @@ section {
 }
 
 
-/* Bannier Home & About */
+/* BANNIER Home & About */
 .bannier {
   margin:2em 0;
 
